fixed nowrap and changed font weight

--- a/BodyText/BodyText.module.less
+++ b/BodyText/BodyText.module.less
@@ -7,6 +7,7 @@
 	.sand-body-text();
 	margin: @sand-bodytext-margin;
 	padding: @sand-bodytext-padding;
+	white-space: normal;
 
 	&.small {
 		font-size: @sand-body-small-font-size;
