--- a/styles/variables.less
+++ b/styles/variables.less
@@ -106,7 +106,7 @@
 // Body
 @sand-body-font-family: @sand-font-family;
 @sand-body-font-style: normal;
-@sand-body-font-weight: 300;
+@sand-body-font-weight: 400;
 // Body text line heights must be speified in px, since sand.ExpandableText requires precise line measurement
 @sand-body-line-height-large: @sand-body-line-height + 6; // The fact that this 6 is the same number as the above 6 is coincidental. LargeText is typically 12px larger than normal.
 @sand-body-line-height: @sand-body-font-size + 6;
